--- a/index.css
+++ b/index.css
@@ -7,13 +7,11 @@ body {
 #game {
   width: 100vw;
   height: 100vh;
-  background: url('https://i.postimg.cc/Mf0wf5KD/bg.png') repeat-x center bottom;
-  background-size: cover;
-  image-rendering: pixelated; /* Keeps pixel art crisp */
+  background: url('https://i.postimg.cc/Mf0wf5KD/bg.png') no-repeat center center;
+  background-size: contain;
   position: relative;
   overflow: hidden;
 }
-
 
 
 #player {
